tests/support/validation/invalid/trip_non_public/non_public_revenue.trp
TRP;  51219528;  202009;12345  ;  111;011150140;Regular        ; 0;0;0
PTS;   1154a
PTS;   1155a